            nRF52840: Flow control XOFF is now sent at only 3/8th full - delays in BLE mean we can sometimes fill our 1k input buffer otherwise
            __FILE__ is now set correctly for apps (fixes 2v11 regression)
            Bangle.js: Ensure Bangle.getHealthStatus("day") resets at midnight (fix https://github.com/espruino/BangleApps/issues/1216)

     2v11 : Bangle.js: Enable the Bangle.on('tap') event from the accelerometer by default
            Bangle.js: revert to (better) Kionix default thresholds for tap detect
            Bangle.js 2: When wake on touch is enabled, use a single tap on the front of the device for wakeup
            Bangle.js: Display 'checking storage' message on first boot to alert users to slight delay
            Bangle.js: Tweaked step count algorithm (low pass filter, 4 steps in 90s)
            Graphics: asBMP/asURL/dump now support more bit depths
            Graphics: Allow .setFont/.getFont to use font size in a colon after the font name
            Graphics: .getFonts now lists 'setFont' functions however they were added (to `g`, built in, or to the prototype)
            Graphics: When rendering fonts with a solid background, ensure the gap between is filled too
            Flat Strings are now always aligned on a 4 byte boundary (fix #2040)
            Graphics: add setTheme on supported devices
            RAK5010: switch to 1.8v internal voltage (was 3.3v) to make GSM comms reliable, upgrade BG96 module
            RAK5010: Compile in TLS/HTTPS support
            Bangle.js: Fix issue where if non-fullscreen notification was visible and Bangle.js reset, screen was off-center
            Fix for issue with pretokenised code not creating correct text string for reserved words, eg {undefined:1}
            Bangle.js: Turn vibrate off every time a new app loads
            Fix issue where ({a:0}).a in the console would create a ReferenceError (works in code)